fix: use surface background on mobile nav open

--- a/packages/components/src/components/telekom/app-header/app-header.css
+++ b/packages/components/src/components/telekom/app-header/app-header.css
@@ -183,6 +183,9 @@
     z-index: 95;
     position: absolute;
   }
+  .header.menu--open .header__nav {
+    background-color: var(--telekom-color-background-surface);
+  }
   .header .header__nav__mobile-menu {
     top: var(--header-nav-height);
     width: 100%;
